4K portrait & (poorly) fix commission hero video border on Firefox

--- a/core.css
+++ b/core.css
@@ -29,11 +29,15 @@ iframe{border: none;}
 
     --clr-palette-orange: hsl(36, 96%, 62%);
 }
-html[data-theme="dark"]{
+html[data-theme="dark"],
+html[data-theme="dark"] *::before,
+html[data-theme="dark"] *::after{
     --clr-lightest: hsl(0, 0%, 10%);
     --clr-darkest: hsl(0, 0%, 90%);
 }
-html[data-theme="dark"] [data-invert-dark="true"]{
+html[data-theme="dark"] [data-invert-dark="true"],
+html[data-theme="dark"] [data-invert-dark="true"]::before,
+html[data-theme="dark"] [data-invert-dark="true"]::after{
     filter: invert(0.9);
 }
 
@@ -44,6 +48,13 @@ html[data-theme="dark"] [data-invert-dark="true"]{
         --space-small: 1.85rem;
         --space-large: 2.35rem;
         --space-largest: 2.85rem;
+    }
+}
+
+/* 4K Portrait */
+@media only screen and (min-width: 1367px) and (max-width: 1440px) and (orientation: portrait){ /* Between 1367px and 1440px */
+    :root,::before,::after{
+        --nl-position: 87.5%;
     }
 }
 
@@ -465,7 +476,6 @@ html[data-theme="dark"] #night-light + label.first_visit::after{
     animation-delay: 2000ms;
     opacity: 1;
 }
-
 
 /* Tablet & Phone */
 @media only screen and (max-width: 1050px){ /* 1050px or smaller */
