--- a/portfolio.css
+++ b/portfolio.css
@@ -158,6 +158,53 @@
     transform: rotateZ(405deg) scale(1.2);
 }
 
+/* 4K Portrait */
+@media only screen and (min-width: 1367px) and (max-width: 1440px) and (orientation: portrait){
+    .grid-main{
+        max-width: 75%;
+        padding-top: calc(var(--space-largest) * 2);
+    }
+    .grid-main__pagination ul{
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(4, auto);
+        row-gap: var(--space-largest) !important;
+    }
+    .v-card h2{
+        font-size: calc(var(--txt-h5) / 1.4);
+        line-height: calc(var(--txt-lh) / 1.75);
+    }
+    .v-card h3{
+        font-size: calc(var(--txt-h6) / 1.4);
+        line-height: calc(var(--txt-lh) / 1.75);
+    }
+    .v-card .v-card__img{
+        width: 80%;
+        margin-inline: auto;
+    }
+    #search{
+        place-items: center;
+        min-width: 100% !important;
+    }
+    #search-bar{
+        min-width: 100% !important;
+    }
+    #svg-search-glass{
+        width: 1.5rem;
+    }
+    #search-submit{
+        height: 100%;
+        cursor: pointer;
+        padding-inline: calc(var(--space-small) / 2);
+        padding-block: calc(var(--space-small) / 4);
+    }
+    .pagination-number,
+    .pagination-button{
+        height: calc(var(--space-largest) * 1.25);
+        width: calc(var(--space-largest) * 1.25);
+    }
+
+}
+
 /* Tablet landscape */
 @media only screen and (min-width: 1051px) and (max-width: 1366px) and (orientation: landscape){ /* between 1051px and 1366px */
     
