--- a/portfolio/proj_page.css
+++ b/portfolio/proj_page.css
@@ -158,6 +158,25 @@
     max-width: var(--space-largest);
 }
 
+/* 4K Portrait */
+@media only screen and (min-width: 1367px) and (max-width: 1440px) and (orientation: portrait){
+    .grid-main{
+        grid-template-columns: 100%;
+        grid-template-rows: auto;
+        grid-template-areas:
+            "video"
+            "info";
+        max-width: 75%;
+        padding-block: calc(var(--space-largest) * 2);
+    }
+
+    #image-zoom{
+        width: 100%;
+        height: 100%;
+    }
+}
+
+/* Tablet & Phone */
 @media only screen and (max-width: 1050px){
     .grid-main{
         grid-template-columns: 100%;
